--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -548,32 +548,32 @@ div.unread-mentions-indicator-bottom {
     background: rgba(58, 113, 193, 0.15) !important;
 }
 
-.wrapper-1Rf91z{width: 126px;}
-.wrapper-1Rf91z .scroller-wrap{width: 150px;}
-.wrapper-1Rf91z .scroller-2TZvBN {
+.wrapper-3NnKdC{width: 126px;}
+.wrapper-3NnKdC .scroller-wrap{width: 150px;}
+.wrapper-3NnKdC .scroller-1Bvpku {
     display: flex;
     flex-flow: row wrap;
     padding-left: 0;
     align-content: flex-start;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .container-1ETFDs {
+.wrapper-3NnKdC .scroller-1Bvpku .container-1ETFDs {
     margin-left: 8px;
     margin-top: 8px;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .container-1ETFDs.unread-2OHH1w::before {
+.wrapper-3NnKdC .scroller-1Bvpku .container-1ETFDs.unread-2OHH1w::before {
     left: -2px;
     top: 5px;
     z-index:9000;
 }
 
-.scroller-2TZvBN > .container-1ETFDs,
-.scroller-2TZvBN > .container-1ETFDs:first-child {
+.scroller-1Bvpku > .container-1ETFDs,
+.scroller-1Bvpku > .container-1ETFDs:first-child {
     margin: auto;
 }
 
-.dms-rcsEnV > .wrapper-1Rf91z .scroller-2TZvBN .container-1ETFDs:first-child {
+.dms-rcsEnV > .wrapper-3NnKdC .scroller-1Bvpku .container-1ETFDs:first-child {
     margin: none !important;
 }
 
@@ -589,13 +589,13 @@ div.unread-mentions-indicator-bottom {
     text-align: center;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .guildSeparator-3s64Iy {
+.wrapper-3NnKdC .scroller-1Bvpku .guildSeparator-33mFX6 {
     position: relative;
     width: 100%;
     margin-top: 12px;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .friendsOnline-2JkivW {
+.wrapper-3NnKdC .scroller-1Bvpku .friendsOnline-2JkivW {
     position: relative;
     width: 100%;
     margin: auto;
@@ -603,25 +603,25 @@ div.unread-mentions-indicator-bottom {
     margin-bottom: 10px;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .container-1ETFDs.selected-nT-gM3:before {
+.wrapper-3NnKdC .scroller-1Bvpku .container-1ETFDs.selected-nT-gM3:before {
     display: none;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .container-1ETFDs {
+.wrapper-3NnKdC .scroller-1Bvpku .container-1ETFDs {
     position: relative;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .dms-rcsEnV {
+.wrapper-3NnKdC .scroller-1Bvpku .dms-rcsEnV {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .dms-rcsEnV .container-1ETFDs {
+.wrapper-3NnKdC .scroller-1Bvpku .dms-rcsEnV .container-1ETFDs {
     left: 0;
 }
 
-.theme-dark .wrapper-1Rf91z {
+.theme-dark .wrapper-3NnKdC {
     background-color: var(--main-transparency);
 }
 
@@ -640,7 +640,7 @@ div.unread-mentions-indicator-bottom {
     margin-top: 0px !important;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN .container-1ETFDs.unread-2OHH1w::before {
+.wrapper-3NnKdC .scroller-1Bvpku .container-1ETFDs.unread-2OHH1w::before {
     left: -2px !important;
     top: -2px !important;
     z-index: -1 !important;
@@ -680,7 +680,7 @@ div.unread-mentions-indicator-bottom {
     background-color: rgba(54, 57, 63, 0);
 }
 
-.wrapper-1Rf91z .scroller-wrap {
+.wrapper-3NnKdC .scroller-wrap {
     width: 136px;
 }
 
@@ -689,11 +689,11 @@ div.unread-mentions-indicator-bottom {
     border-right: 1px solid var(--border-lines-color);
 }
 
-.theme-dark .guildSeparator-3s64Iy:after {
+.theme-dark .guildSeparator-33mFX6:after {
     background: var(--border-lines-color);
 }
 
-.guildSeparator-3s64Iy:after {
+.guildSeparator-33mFX6:after {
     height: 1px;
 }
 
@@ -766,7 +766,7 @@ div.unread-mentions-indicator-bottom {
     border-radius: 25px;
 }
 
-.scroller-2FKFPG > .listItem-2P_4kh:first-child > .listItemWrapper-3X98Pc > .wrapper-25eVIn {
+.scroller-2FKFPG > .listItem-GuPuDH:first-child > .listItemWrapper-3X98Pc > .wrapper-25eVIn {
     background: var(--friends-icon) !important;
     background-position: var(--friends-icon-position) !important;
     background-repeat: no-repeat !important;
@@ -1195,7 +1195,7 @@ padding: 0 !important;
     background-color: rgba(255,255,255,.15);
 }
 
-.theme-dark .circleIconButton-jET_ig {
+.theme-dark .circleIconButton-1QV--U {
     background: rgba(0,0,0,.4);
     border-color: rgba(255,255,255,.3);
     color: rgba(255,255,255,.15);
@@ -1266,7 +1266,7 @@ padding: 0 !important;
     border-color: rgba(255,255,255,.3);
 }
 
-.scroller-2TZvBN > .container-1ETFDs:nth-last-child(2) {
+.scroller-1Bvpku > .container-1ETFDs:nth-last-child(2) {
     margin-right: 0 !important;
 }
 .theme-dark .gameUpdates-2GPqBU {
@@ -1372,7 +1372,7 @@ padding: 0 !important;
   margin-left: 8px;
 }
 
-.scroller-2TZvBN > div:nth-last-child(-n+2) {
+.scroller-1Bvpku > div:nth-last-child(-n+2) {
   margin-right: 8px;
   margin-left: 0px;
 }
@@ -1494,7 +1494,7 @@ padding: 0 !important;
     margin: 0 auto;
 }
 
-.guildSeparator-3s64Iy {
+.guildSeparator-33mFX6 {
     background: hsla(0,0%,100%,.1);
     height: 0.5px;
 }
@@ -1649,22 +1649,22 @@ padding: 0 !important;
 
 /* Guild listing styles */
 
-.wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(1) {
+.wrapper-3NnKdC .scroller-1Bvpku > div.listItem-GuPuDH:nth-child(1) {
     width: 100% !important;
     margin-bottom: 8px;
     margin-left: 2px;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN > div.listItem-2P_4kh:nth-child(1) .item-2hkk8m {
+.wrapper-3NnKdC .scroller-1Bvpku > div.listItem-GuPuDH:nth-child(1) .item-2hkk8m {
     opacity: 0 !important;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN > div:not(.listItem-2P_4kh) > div {
+.wrapper-3NnKdC .scroller-1Bvpku > div:not(.listItem-GuPuDH) > div {
     width: 50px;
     margin-left: 9px;
 }
 
-.listItem-2P_4kh {
+.listItem-GuPuDH {
     width: auto;
     margin-left: 0px;
 }
@@ -1681,8 +1681,8 @@ padding: 0 !important;
     margin-left: 0;
     margin-top: 0;
     position: absolute;
-    top: 0;
-    right: 1px !important;
+    top: -2px;
+    right: 3px !important;
     width: 48px;
     height: 48px !important;
     /* remove the left to right display transformation */
@@ -1693,7 +1693,7 @@ padding: 0 !important;
     position: absolute;
     top: -2px;
 }
-.wrapper-1Rf91z .scroller-2TZvBN .guildSeparator-3s64Iy {
+.wrapper-3NnKdC .scroller-1Bvpku .guildSeparator-33mFX6 {
     position: relative;
     margin-top: 10px;
     width: 80px;
@@ -1701,7 +1701,7 @@ padding: 0 !important;
     margin: 10px auto 5px;
     margin-left: 24px;
 }
-.listItem-2P_4kh.da-listItem:hover .item-2hkk8m {
+.listItem-GuPuDH.da-listItem:hover .item-2hkk8m {
     border-radius: 18px;
     border: none;
     transition: none !important;
@@ -1761,11 +1761,11 @@ padding: 0 !important;
     padding-right: 54px;
 }
 
-.scroller-2FKFPG > .listItem-2P_4kh:first-child > .listItemWrapper-3X98Pc > .wrapper-25eVIn > svg {
+.scroller-2FKFPG > .listItem-GuPuDH:first-child > .listItemWrapper-3X98Pc > .wrapper-25eVIn > svg {
     opacity: 0;
 }
 
-.scroller-2TZvBN {
+.scroller-1Bvpku {
     background-color: transparent;
 }
 
@@ -1810,7 +1810,7 @@ padding: 0 !important;
     border-radius: 100%;
 }
 
-.expandedGuilds-1JMD4M .listItem-2P_4kh .pill-31IEus {
+.expandedGuilds-1JMD4M .listItem-GuPuDH .pill-31IEus {
     left: -5px;
     position: absolute;
     top: -2px;
@@ -1946,25 +1946,25 @@ padding: 0 !important;
 	border:none;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN > div[aria-label="Servers"] {
+.wrapper-3NnKdC .scroller-1Bvpku > div[aria-label="Servers"] {
     display: flex;
     flex-direction: column;
     flex-flow: row wrap;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN > div {
+.wrapper-3NnKdC .scroller-1Bvpku > div {
     display: flex;
     flex-direction: column;
     flex-flow: row wrap;
 }
 
-.tutorialContainer-1v44GL {
+.tutorialContainer-2sGCg9 {
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-.tutorialContainer-1v44GL .listItem-2P_4kh .listItemWrapper-3X98Pc .wrapper-25eVIn {
+.tutorialContainer-2sGCg9 .listItem-GuPuDH .listItemWrapper-3X98Pc .wrapper-25eVIn {
     background: var(--friends-icon) !important;
     background-position: var(--friends-icon-position) !important;
     background-repeat: no-repeat !important;
@@ -1972,7 +1972,7 @@ padding: 0 !important;
     border-radius: 100%;
 }
 
-.tutorialContainer-1v44GL .listItem-2P_4kh .listItemWrapper-3X98Pc .wrapper-25eVIn svg {
+.tutorialContainer-2sGCg9 .listItem-GuPuDH .listItemWrapper-3X98Pc .wrapper-25eVIn svg {
     opacity: 0;
 }
 
@@ -1980,11 +1980,11 @@ padding: 0 !important;
     left: 0px;
 }
 
-.tutorialContainer-1v44GL .listItem-2P_4kh {
+.tutorialContainer-2sGCg9 .listItem-GuPuDH {
     right: 3px;
 }
 
-.wrapper-1Rf91z .scroller-2TZvBN > div[role="tree"] {
+.wrapper-3NnKdC .scroller-1Bvpku > div[role="tree"] {
     display: flex;
     flex-direction: column;
     flex-flow: row wrap;
@@ -2208,4 +2208,27 @@ padding: 0 !important;
 
 .wrapper-PY0fhH.muted-2JBAyG:hover .icon-2yIBmh, .wrapper-PY0fhH.muted-2JBAyG:hover .name-3l27Hl, .wrapper-PY0fhH:hover .icon-2yIBmh, .wrapper-PY0fhH:hover .name-3l27Hl {
     color: var(--main-color);
+}
+
+.wrapper-sa6paO {
+    overflow: visible;
+}
+
+.expandedFolderBackground-1cujaW {
+    left: 1px;
+}
+
+.wrapper-3NnKdC
+  .scroller-1Bvpku
+  > div.listItem-GuPuDH:nth-child(1)
+  .item-2hkk8m {
+  opacity: 0 !important;
+}
+
+.wrapper-3NnKdC .scroller-1Bvpku div .listItem-GuPuDH .pill-1Z5PKm .item-2hkk8m {
+	opacity: 0 !important;
+}
+
+.tree-2wKJdG:focus {
+	outline: none;
 }
