make server folders circles again

--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -2248,3 +2248,10 @@ padding: 0 !important;
 .tutorialContainer-2sGCg9 .listItem-GuPuDH .listItemWrapper-KhRmzM .wrapper-1BJsBx svg {
     opacity: 0;
 }
+
+.folderIconWrapper-1_bOZe {
+    border-radius: 100%;
+}
+.folder-1hbNCn {
+    background-color: transparent;
+}
