--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -330,7 +330,7 @@
 }
 
 /* Add Server / Discovery */
-.circleIconButton-jET_ig {
+.circleIconButton-1QV--U {
   color: var(--add-discover-icon-color);
   background-color: var(--add-discover-icon-transparency);
 }
