--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -2261,3 +2261,11 @@ padding: 0 !important;
     background-color: rgba(255,255,255,0.1);
     border-color: hsla(0,0%,100%,.2);
 }
+
+.container-lRFx4q {
+    background-color: transparent;
+}
+
+.section-2gLsgF {
+    background-color: transparent;
+}
