--- a/NotAnotherAnimeThemeTCSL.theme.css
+++ b/NotAnotherAnimeThemeTCSL.theme.css
@@ -26,7 +26,7 @@
     Change the theme background
     Default: https://i.imgur.com/j1Z6HVc.jpg
     */
-    --background-image: url(https://i.imgur.com/j1Z6HVc.jpg);
+    --background-image: url(https:maxresdefault.png
 
     /*
     Change your friends icon image
