--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -721,3 +721,15 @@
   background-color: var(--reaction-emoji-hover-background-color);
   border-color: var(--reaction-emoji-hover-border-color);
 }
+
+.stageSection-3mAD8V {
+  background: transparent;
+}
+
+.theme-dark .container-S9SaVf {
+  background-color: rgba(255, 255, 255, 0.08);
+}
+
+.theme-dark .container-S9SaVf:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
