Role page colors

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -733,3 +733,11 @@
 .theme-dark .container-S9SaVf:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
+.titleContainer-2CXtJo {
+  background-color: transparent;
+}
+
+.header-2mZ9Ov {
+  background-color: transparent;
+}
